# portal-htr

./: .env_example  README.md  portal_hocr  pyproject.toml
src/portal_htr/: islandora.py  main.py  segmentation.py  trocr.py
